--- a/requirements.txt
+++ b/requirements.txt
@@ -116,7 +116,8 @@ pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-json-logger==2.0.4
 pytz==2022.6
-
+pytest
+pytest-benchmark
 pywinpty==2.0.10
 PyYAML==6.0
 pyzmq==24.0.1
