--- a/requirements.txt
+++ b/requirements.txt
@@ -1,138 +1,138 @@
-﻿absl-py==1.4.0
-aiofiles==22.1.0
-aiosqlite==0.18.0
-anyio==3.6.2
-appdirs==1.4.4
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.0.8
-astunparse==1.6.3
-attrs==22.2.0
-Babel==2.11.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==6.0.0
-bs4==0.0.1
-cachetools==5.3.0
-certifi==2022.9.24
-cffi==1.15.1
-charset-normalizer==2.1.1
-click==8.1.3
-colorama==0.4.5
-debugpy==1.6.3
-decorator==5.1.1
-defusedxml==0.7.1
-dill==0.3.6
-entrypoints==0.4
-executing==1.1.0
-face-recognition-models==0.3.0
-fastjsonschema==2.16.2
-filelock==3.8.0
-Flask==2.2.3
-Flask-Cors==3.0.10
-Flask-MySQL==1.5.2
-Flask-SQLAlchemy==3.0.3
-flatbuffers==23.3.3
-fqdn==1.5.1
-gast==0.4.0
-google-auth==2.17.3
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-greenlet==2.0.2
-grpcio==1.53.0
-gunicorn==20.1.0
-h5py==3.8.0
-html5lib==1.1
-idna==3.4
-install==1.3.5
-ipykernel==6.16.0
-ipython==8.5.0
-ipython-genutils==0.2.0
-isoduration==20.11.0
-itsdangerous==2.1.2
-jax==0.4.8
-jedi==0.18.1
-Jinja2==3.1.2
-joblib==1.2.0
-json5==0.9.11
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter-events==0.5.0
-jupyter-ydoc==0.2.2
-jupyter_client==8.0.2
-jupyter_core==5.2.0
-jupyter_server==2.2.1
-jupyter_server_fileid==0.6.0
-jupyter_server_terminals==0.4.4
-jupyter_server_ydoc==0.6.1
-jupyterlab==3.6.1
-jupyterlab-pygments==0.2.2
-jupyterlab_server==2.19.0
-keras==2.12.0
-libclang==16.0.0
-lxml==4.9.1
-Markdown==3.4.3
-MarkupSafe==2.1.2
-matplotlib-inline==0.1.6
-mistune==2.0.4
-ml-dtypes==0.1.0
-multitasking==0.0.11
-nbclassic==0.5.1
-nbclient==0.7.2
-nbconvert==7.2.9
-nbformat==5.7.3
-nest-asyncio==1.5.6
-nlp==0.4.0
-nltk==3.8.1
-notebook==6.5.2
-notebook_shim==0.2.2
-numpy==1.22.3
-oauthlib==3.2.2
+﻿absl-py
+aiofiles
+aiosqlite
+anyio
+appdirs
+argon2-cffi
+argon2-cffi-bindings
+arrow
+asttokens
+astunparse
+attrs
+Babel
+backcall
+beautifulsoup4
+bleach
+bs4
+cachetools
+certifi
+cffi
+charset-normalizer
+click
+colorama
+debugpy
+decorator
+defusedxml
+dill
+entrypoints
+executing
+face-recognition-models
+fastjsonschema
+filelock
+Flask
+Flask-Cors
+Flask-MySQL
+Flask-SQLAlchemy
+flatbuffers
+fqdn
+gast
+google-auth
+google-auth-oauthlib
+google-pasta
+greenlet
+grpcio
+gunicorn
+h5py
+html5lib
+idna
+install
+ipykernel
+ipython
+ipython-genutils
+isoduration
+itsdangerous
+jax
+jedi
+Jinja2
+joblib
+json5
+jsonpointer
+jsonschema
+jupyter-events
+jupyter-ydoc
+jupyter_client
+jupyter_core
+jupyter_server
+jupyter_server_fileid
+jupyter_server_terminals
+jupyter_server_ydoc
+jupyterlab
+jupyterlab-pygments
+jupyterlab_server
+keras
+libclang
+lxml
+Markdown
+MarkupSafe
+matplotlib-inline
+mistune
+ml-dtypes
+multitasking
+nbclassic
+nbclient
+nbconvert
+nbformat
+nest-asyncio
+nlp
+nltk
+notebook
+notebook_shim
+numpy
+oauthlib
 optax
-opencv-python==4.6.0.66
-opt-einsum==3.3.0
+opencv-python
+opt-einsum
 packaging
-pandas==1.5.1
-pandocfilters==1.5.0
-parse==1.19.0
-parso==0.8.3
-pickleshare==0.7.5
-platformdirs==2.6.2
-procfile==0.1.0
-prometheus-client==0.16.0
-prompt-toolkit==3.0.31
-protobuf==4.22.3
-psutil==5.9.2
-pure-eval==0.2.2
-pyarrow==10.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-Pygments==2.13.0
-PyMySQL==1.0.3
-pyparsing==3.0.9
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-python-json-logger==2.0.4
-pytz==2022.6
+pandas
+pandocfilters
+parse
+parso
+pickleshare
+platformdirs
+procfile
+prometheus-client
+prompt-toolkit
+protobuf
+psutil
+pure-eval
+pyarrow
+pyasn1
+pyasn1-modules
+pycparser
+Pygments
+PyMySQL
+pyparsing
+pyrsistent
+python-dateutil
+python-json-logger
+pytz
 pytest
 pytest-benchmark
-pywinpty==2.0.10
-PyYAML==6.0
-pyzmq==24.0.1
-regex==2023.3.23
-requests==2.28.1
-requests-oauthlib==1.3.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rsa==4.9
-scikit-learn==1.1.2
+pywinpty
+PyYAML
+pyzmq
+regex
+requests
+requests-oauthlib
+rfc3339-validator
+rfc3986-validator
+rsa
+scikit-learn
 scipy
-Send2Trash==1.8.0
-six==1.16.0
-sklearn==0.0
-sniffio==1.3.0
+Send2Trash
+six
+sklearn
+sniffio
 soupsieve==2.3.2.post1
 SQLAlchemy==2.0.7
 stack-data==0.5.1
