--- a/requirements.txt
+++ b/requirements.txt
@@ -134,16 +134,16 @@ six
 sklearn
 sniffio
 soupsieve==2.3.2.post1
-SQLAlchemy==2.0.7
-stack-data==0.5.1
-tensorboard==2.12.2
-tensorboard-data-server==0.7.0
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-hub==0.12.0
-tensorflow-intel==2.12.0
-tensorflow-io-gcs-filesystem==0.31.0
+SQLAlchemy
+stack-data
+tensorboard
+tensorboard-data-server
+tensorboard-plugin-wit
+tensorflow
+tensorflow-estimator
+tensorflow-hub
+tensorflow-intel
+tensorflow-io-gcs-filesystem
 tensorflowjs
 termcolor==2.2.0
 terminado==0.17.1
