--- a/requirements.txt
+++ b/requirements.txt
@@ -1,170 +1,4 @@
-﻿absl-py
-aiofiles
-aiosqlite
-anyio
-appdirs
-argon2-cffi
-argon2-cffi-bindings
-arrow
-asttokens
-astunparse
-attrs
-Babel
-backcall
-beautifulsoup4
-bleach
-bs4
-cachetools
-certifi
-cffi
-charset-normalizer
-click
-colorama
-debugpy
-decorator
-defusedxml
-dill
-entrypoints
-executing
-face-recognition-models
-fastjsonschema
-filelock
-Flask
-Flask-Cors
-Flask-MySQL
-Flask-SQLAlchemy
-flatbuffers
-fqdn
-gast
-google-auth
-google-auth-oauthlib
-google-pasta
-greenlet
-grpcio
-gunicorn
-h5py
-html5lib
-idna
-install
-ipykernel
-ipython
-ipython-genutils
-isoduration
-itsdangerous
-jax
-jedi
-Jinja2
-joblib
-json5
-jsonpointer
-jsonschema
-jupyter-events
-jupyter-ydoc
-jupyter_client
-jupyter_core
-jupyter_server
-jupyter_server_fileid
-jupyter_server_terminals
-jupyter_server_ydoc
-jupyterlab
-jupyterlab-pygments
-jupyterlab_server
-keras
-libclang
-lxml
-Markdown
-MarkupSafe
-matplotlib-inline
-mistune
-ml-dtypes
-multitasking
-nbclassic
-nbclient
-nbconvert
-nbformat
-nest-asyncio
-nlp
-nltk
-notebook
-notebook_shim
-numpy
-oauthlib
-optax
-opencv-python
-opt-einsum
-packaging
-pandas
-pandocfilters
-parse
-parso
-pickleshare
-platformdirs
-procfile
-prometheus-client
-prompt-toolkit
-protobuf
-psutil
-pure-eval
-pyarrow
-pyasn1
-pyasn1-modules
-pycparser
-Pygments
-PyMySQL
-pyparsing
-pyrsistent
-python-dateutil
-python-json-logger
-pytz
-pytest
-pytest-benchmark
-pywinpty
-PyYAML
-pyzmq
-regex
-requests
-requests-oauthlib
-rfc3339-validator
-rfc3986-validator
-rsa
-scikit-learn
-scipy
-Send2Trash
-six
-sklearn
-sniffio
-soupsieve==2.3.2.post1
-SQLAlchemy
-stack-data
-tensorboard
-tensorboard-data-server
-tensorboard-plugin-wit
-tensorflow
-tensorflow-estimator
-tensorflow-hub
-tensorflow-intel
-tensorflow-io-gcs-filesystem
-tensorflowjs
-termcolor==2.2.0
-terminado==0.17.1
-threadpoolctl==3.1.0
-tinycss2==1.2.1
-tomli==2.0.1
-tornado==6.2
-touch==2020.12.3
-tqdm==4.64.1
-traitlets==5.9.0
-typing_extensions==4.5.0
-uri-template==1.2.0
-urllib3==1.26.12
-values==2020.12.3
-wcwidth==0.2.5
-webcolors==1.12
-webencodings==0.5.1
-websocket-client==1.5.0
-Werkzeug==2.2.3
-wrapt==1.14.1
-xxhash==3.1.0
-y-py==0.5.5
-yfinance==0.1.87
-ypy-websocket==0.8.2
+tensorflow==2.6.0
+numpy==1.19.5
+Flask==2.0.1
+
